# ai-recruiter-indiaruns

./: .dockerignore  .gitignore  DECK_OUTLINE.md  Dockerfile  IDEA_SUBMISSION.md  README.md  SUBMISSION_CHECKLIST.md  pyproject.toml  requirements.txt  submission_metadata.yaml
airecruiter/: __init__.py  dataio.py  embeddings.py  fairness.py  features.py  honeypot.py  jd.py  reasoning.py  score.py
artifacts/: cand_ids.txt  ideal_vec.npy
data/: job_description.docx
scripts/: finalize_submission.sh  inspect_top.py  precompute_embeddings.py  run_submission.py
tests/: test_fairness.py  test_format.py  test_honeypot.py
